@@ -4,6 +4,7 @@
 - Fixed: Network error when consuming or purchasing (and other actions), due to new rule for API
   requests which Grocy server 4.0.3 introduced (#772)
 - Fixed: Product information not saved when going back (#765)
+- Fixed: Missing delete confirmation in recipe edit mode (#764)
 
 Sorry for any inconvenience caused by the bugs above.
 Other bug fixes and new features will come soon, once the main developer of this app
